# CRF

./: README
doc/CRF/: CaveRenderingFramework.tex  HowToRead.tex  abstract.tex  glossary.tex  title.tex
doc/Pflichtenheft/: Administratives.tex  Allgemein.tex  Anforderungen.tex  Architektur.tex  Ausgangslage.tex  Glossar.tex  Intro.tex  Pflichtenheft.tex  Projektmanagement.tex  Quellen.tex  Testing.tex  Ziele.tex  title.tex  usecases.tex
doc/Pflichtenheft/Anforderungen/: Optional.tex  Primaer.tex
doc/Pflichtenheft/Ausgangslage/: CAVE.tex  Graphics.tex  PR.tex  SG.tex
doc/Pflichtenheft/Ausgangslage/PR/: Equalizer.tex
doc/Presentation/: Presentation.nav  Presentation.tex  Procedure.tex  Project.tex  Solution.tex  Summary.tex
doc/TechnicalReport/: DemoApplications.tex  Equalizer.tex  Evaluation.tex  Framework.tex  Introduction.tex  Outlook.tex  TechnicalReport.tex  Testing.tex  abstract.tex  history.tex  title_tech.tex
doc/TechnicalReport/Appendices/: Appendices.tex  Appendix_Config.tex  Appendix_Demo.tex  Appendix_Equalizer.tex  Appendix_Tests.tex
doc/TechnicalReport/codeSamples/: 1node-8pipe.CAVE.BFH.eqc
doc/ThesisReport/: Conclusion.tex  FailedAttempts.tex  Goals.tex  InitialSituation.tex  Introduction.tex  Organization.tex  Prerequisits.tex  Procedure.tex  ProjectManagement.tex  Summary.tex  Testing.tex  ThesisReport.tex  clear.sh  glossary-tree.sty  mfirstuc.sty  outlookPR.tex  title_thesis.tex
doc/ThesisReport/Appendices/: Appendices.tex  Appendix_Worklog.tex
doc/UserManual/: Example.tex  Installation.tex  Introduction.tex  UserManual.tex  glossary-hypernav.sty  title_manual.tex
doc/UserManual/Appendices/: Appendices.tex  Appendix_Equalizer.tex  Appendix_QuickInstall.tex
doc/doxygen_crfAPI/: Doxyfile.cfg  crf.cfg
doc/doxygen_crfAPI/crf/html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016_source.html  (+101 more)
doc/tex-include/: crfbibliography.bib  glossaries-accsupp.sty  glossaries-babel.sty  glossaries.sty  glossary-list.sty  glossary-long.sty  glossary-longragged.sty  glossary-super.sty  glossary-superragged.sty  glossary.tex  header_settings.tex  header_settings_de.tex  makeglossaries  settings.tex  settings_de.tex  shortlst.sty  stmaryrd.sty  texdraw.sty  title.tex.tmpl
src/: COPYRIGHT.txt  README.txt
src/configs/: 1node-6pipe.CAVE.BFH.eqc  1node-8pipe.CAVE.BFH.eqc  5node-5pipe.CAVE.BFH.eqc  6node-6pipe.CAVE.BFH.eqc
src/crf/: Application.cpp  Application.h  CMakeLists.txt  Channel.cpp  Channel.h  Config.cpp  Config.h  EqViewer.cpp  EqViewer.h  FrameData.cpp  FrameData.h  InitData.cpp  InitData.h  Node.cpp  Node.h  NodeFactory.h  Pipe.cpp  Pipe.h  SceneReader.cpp  SceneReader.h  Util.h  crfConfig.cpp  crfConfig.h  crfNodeFactory.h  crfPipe.cpp  crfPipe.h  crfStarter.cpp  crfStarter.h
src/crf/cmake/: FindOSG.cmake  FindOSG_DEBUG.cmake
src/demos/crfDemo/: CMakeLists.txt
src/demos/crfHelloWorld/: CMakeLists.txt
src/demos/crfShaderDemo/: CMakeLists.txt
(+74 files in other folders)
